[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fracevent"
version = "0.1.0"
description = "Event-camera simulation via fractional-relaxation pixel dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch>=2.0",
  "h5py",
  "pyyaml",
  "pillow",
  "imageio",
  "imageio-ffmpeg",
]

[project.scripts]
fracevent = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*"]
